# thabetha

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  rls.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
backend/.specify/integrations/: claude.manifest.json  speckit.manifest.json
backend/.specify/memory/: constitution.md
backend/app/: __init__.py  main.py
backend/app/api/: ai.py  auth.py  dashboards.py  debts.py  groups.py  health.py  notifications.py  profiles.py  qr.py  receipt_files.py  router.py  webhooks_payments.py  webhooks_whatsapp.py
backend/app/core/: config.py  db_session.py  security.py
backend/app/db/: __init__.py  database.py  migrate.py  supabase.py
backend/app/observability/: shadow_log.py
backend/app/repositories/: __init__.py  attachment_retention.py  base.py  local_receipt_store.py  memory.py  postgres.py  system_tasks.py
backend/app/schemas/: domain.py
backend/app/services/: demo_data.py  netting.py
backend/app/services/ai/: __init__.py  draft_extract.py  limits.py  llm_extract.py  mock_transcribe.py  transcribe.py
backend/app/services/ai/merchant_chat/: __init__.py  anthropic_provider.py  chat_ai_provider.py  mock_provider.py  orchestrator.py  provider.py  system_prompt.py  time_resolver.py  tools.py
backend/app/services/payments/: __init__.py  mock.py  provider.py  tap.py
backend/app/services/whatsapp/: __init__.py  cloud_api.py  dispatch.py  mock.py  provider.py  templates.py
backend/specs/001-qr-scanner-prefill-create-debt/: plan.md  research.md
backend/tests/: conftest.py  test_ai_voice_debt_draft.py  test_create_debt_with_debtor_id.py  test_debt_lifecycle.py  test_debts_cancel.py  test_e2e_demo_path.py  test_group_settlements.py  test_groups_mvp.py  test_netting_algorithm.py  test_payment_equivalence.py  test_payment_online.py  test_payment_webhook.py  test_profile_locale.py  test_profiles_qr_groups_ai.py  test_receipt_attachments.py
backend/tests/ai/: helpers.py  test_merchant_chat_grounding.py  test_merchant_chat_isolation.py  test_merchant_chat_quota.py  test_merchant_chat_time_resolver.py  test_merchant_chat_tools.py
backend/tests/api/: test_notifications_settings_ui_regression.py  test_notifications_whatsapp_visibility.py  test_webhooks_whatsapp.py
backend/tests/rls/: conftest.py  test_isolation_negative.py  test_migration_lint.py  test_qr_preview_policy.py  test_session_reset.py  test_shadow_mode.py  test_system_task_paths.py
backend/tests/services/whatsapp/: test_dispatch_preferences.py  test_dispatch_resilience.py  test_provider_contract.py  test_templates_locale.py
claude-handoff/: api-endpoints.md  database-schema.md  project-status.md  use-cases.md
docker/: init-gotrue.sql
docs/: API_ENDPOINTS.md  Database-Schema-Documentation.md  debt-lifecycle.md  demo-script.md  implementation-plan.md  local-development.md  mvp-scope.md  pages-and-use-cases.md  product-requirements-ar.md  product-requirements.md  roadmap.md  supabase.md  user-flows.md
docs/spec-kit/: README.md  api-endpoints.md  constitution.md  database-schema.md  frontend-surface.md  implementation-plan.md  project-status.md  spec-kit-plan.md  use-cases.md
frontend/: .env.example  .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/eslint-rules/: no-untranslated-jsx.js
frontend/src/: App.tsx
frontend/tests/: groups-notifications.test.tsx  setup.ts  (+2 more)
scripts/: dummy_data.py  seed_dummy_data.py
supabase/: config.toml  seed.sql
(+155 files in other folders)
